# ChangeLog for net-nntp/sabnzbd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sabnzbd-0.7.4 (05 Oct 2012)

  05 Oct 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
  +sabnzbd-0.7.4.ebuild
  Version bump.

*sabnzbd-0.7.3 (14 Aug 2012)

  14 Aug 2012; Daniel Rune Jensen (soehest) drunejensen@gmail.com
  -sabnzbd-0.7.2.ebuild, +sabnzbd-0.7.3.ebuild
  Version bump. sabnzbd.ini file moved to /etc/sabnzbd/sabnzbd.ini. 
  Sabnzbd runtime directories moved to /var/sabnzbd/ Changes to
  /etc/conf.d/sabnzbd.conf, /etc/init.d/sabnzbd and /etc/sabnzbd.ini.
  Permission fixes.
  

*sabnzbd-0.7.2 (20 Jul 2012)

  20 Jul 2012; Sébastien Picavet (SebastienP) sebastien.picavet@gmail.com
  -sabnzbd-0.7.1.ebuild, +sabnzbd-0.7.2.ebuild, files/sabnzbd.ini:
  Version bump and permission improvements for sabnzbd. Thanks to floppym

  14 Jul 2012; Sébastien Picavet (SebastienP) sebastien.picavet@gmail.com
  files/sabnzbd.init:
  Remove a bashism, thanks to floppym

*sabnzbd-0.7.1 (07 Jul 2012)

  07 Jul 2012; Sébastien Picavet (SebastienP) sebastien.picavet@gmail.com
  -sabnzbd-0.7.0.ebuild, +sabnzbd-0.7.1.ebuild:
  Version bump for SABnzbd

*sabnzbd-0.7.0 (15 Jun 2012)

  15 Jun 2012; Sébastien Picavet (SebastienP) sebastien.picavet@gmail.com
  -sabnzbd-0.6.15.ebuild, +sabnzbd-0.7.0.ebuild:
  Version bump for sabnzbd

  03 Jun 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  sabnzbd-0.6.15.ebuild, files/sabnzbd.conf, metadata.xml:
  Replace fancy quotes, drop herd, no herds in sunrise

*sabnzbd-0.6.15 (19 May 2012)

  19 May 2012; Sébastien Picavet (SebastienP) sebastien.picavet@gmail.com
  +sabnzbd-0.6.15.ebuild, +files/sabnzbd.conf, +files/sabnzbd.ini,
  +files/sabnzbd.init, +files/sabnzbd.logrotate, +metadata.xml:
  New Ebuild for bug #132590 thanks to Mekong, Patrick van Dissel, Pandor,
  Roeland Douma, Chris Volny, Thomas Kuther, hasufell, Aniruddha, Kfir Ozer,